[ADD] working IR recivier controls
     - I had to disabled the code for read pins.. It doesn't work togheter it seems

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,16 @@
 [env:d1_mini]
 platform = espressif8266
 board = d1_mini
+
+; [env:nodemcuv2]
+; platform = espressif8266
+; board = nodemcuv2
+
+
 framework = arduino
 lib_deps = 
 	pubsubclient
+	crankyoldgit/IRremoteESP8266@^2.8.4
 monitor_speed = 115200
+
+
